[workspace]
members = ["frontend", "backend"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
surrealdb = "1.0.0-beta.10"
yew = { version="0.20", features=["csr"] }
axum = { version = "0.6" }
tokio = { version = "1.29" }
