[workspace]
members = ["frontend", "backend", "shared"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
yew = { version= "0.21.0", features=["csr"] }

tokio = { version = "1.29" }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = { version = "1" }
thiserror = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12.5", features = ["json"] }
