[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { workspace=true }
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "HtmlSelectElement"] }
wasm-bindgen = {version = "0.2" }